# RuralTrash

./: CMakeLists.txt  TrashCollector.cpp  TrashCollector.hpp  main.cpp  vehicle_code_unit_tests.cpp
FunctionalTests/: EdgeDetection.cpp  HeadwayTrackerTest.cpp  MotorTest.cpp  ReceiverTest.cpp  VideoCapture.cpp
Header/: DataStructures.cpp  DataStructures.hpp  HeadwayTracker.cpp  HeadwayTracker.hpp  ImageProcessor.cpp  ImageProcessor.hpp  LateralController.hpp  Movement.cpp  Movement.hpp  OpController.cpp  OpController.hpp  PinDefs.hpp  Receiver.cpp  Receiver.hpp
Killswitch_ReadReceiver/: Killswitch_ReadReceiver.ino
Tests/: EdgeDetection.cpp  HeadwayTrackerTest.cpp  ReceiverTest.cpp  VideoCapture.cpp  sample_pics.cpp  vehicle_code_unit_tests.cpp
